# aloevera

./: .gitignore  README.md  pyproject.toml
aloevera/: __init__.py  cli.py  export.py  notebook.py  organizers.py  plots.py  utils.py
demo/: demo.ipynb  demo_notebook.ipynb  demo_plots.html  demo_plots.ipynb
